defined base stylesheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Likings</title>
+</head>
+<body>
 
+    <div id="style">
+        <h1>Style</h1>
+        <div class="style-content">
+            <img src="pics/style_New-Balance-1906L-Loafer-Black.jpg" alt="NB 1906L Loafer Black">
+            <img src="pics/style_Mizuno-Wave-Prophecy-Moc.png" alt="Mizuno Wave Prophecy Moc">
+        </div>
+    </div>
+
+    <div id="games">
+        <h1>Games</h1>
+    </div>
+
+    <div id="books">
+        <h1>Books</h1>
+    </div>
+
+    <div id="music">
+        <h1>Music</h1>
+    </div>
+
+    <div id="movies">
+        <h1>Movies</h1>
+    </div>
+
+    <div id="tv-series">
+        <h1>TV Series</h1>
+    </div>
+    
+</body>
+</html>
