--- a/index.html
+++ b/index.html
@@ -10,30 +10,40 @@
 
     <div id="style">
         <h1>Style</h1>
-        <div class="style-content">
-            <img src="pics/style_New-Balance-1906L-Loafer-Black.jpg" alt="NB 1906L Loafer Black">
-            <img src="pics/style_Mizuno-Wave-Prophecy-Moc.png" alt="Mizuno Wave Prophecy Moc">
+        <div id="style-content">
+            <!--<img src="pics/style_New-Balance-1906L-Loafer-Black.jpg" alt="NB 1906L Loafer Black">
+            <img src="pics/style_Mizuno-Wave-Prophecy-Moc.png" alt="Mizuno Wave Prophecy Moc">-->
         </div>
     </div>
 
     <div id="games">
         <h1>Games</h1>
+        <div id="games-content">
+        </div>
     </div>
 
     <div id="books">
         <h1>Books</h1>
+        <div id="books-content">
+        </div>
     </div>
 
     <div id="music">
         <h1>Music</h1>
+        <div id="music-content">
+        </div>
     </div>
 
     <div id="movies">
         <h1>Movies</h1>
+        <div id="movies-content">
+        </div>
     </div>
 
     <div id="tv-series">
         <h1>TV Series</h1>
+        <div id="tv-content">
+        </div>
     </div>
     
 </body>
