--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div id="tv-content" class="content">
         </div>
     </div>
-    
+
+    <script src="script.js"></script>
 </body>
 </html>
