--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div id="games">
         <h1>Games</h1>
-        <div id="games-content" class="content">
+        <div id="game-content" class="content">
         </div>
     </div>
 
     <div id="books">
         <h1>Books</h1>
-        <div id="books-content" class="content">
+        <div id="book-content" class="content">
         </div>
     </div>
 
@@ -36,7 +36,7 @@
 
     <div id="movies">
         <h1>Movies</h1>
-        <div id="movies-content" class="content">
+        <div id="movie-content" class="content">
         </div>
     </div>
 
