--- a/index.html
+++ b/index.html
@@ -8,41 +8,8 @@
 </head>
 <body>
 
-    <div id="style">
-        <h1>Style</h1>
-        <div id="style-content" class="content">
-            <!--<img src="pics/style_New-Balance-1906L-Loafer-Black.jpg" alt="NB 1906L Loafer Black">
-            <img src="pics/style_Mizuno-Wave-Prophecy-Moc.png" alt="Mizuno Wave Prophecy Moc">-->
-        </div>
-    </div>
-
-    <div id="games">
-        <h1>Games</h1>
-        <div id="game-content" class="content">
-        </div>
-    </div>
-
-    <div id="books">
-        <h1>Books</h1>
-        <div id="book-content" class="content">
-        </div>
-    </div>
-
-    <div id="music">
-        <h1>Music</h1>
-        <div id="music-content" class="content">
-        </div>
-    </div>
-
-    <div id="movies">
-        <h1>Movies</h1>
+    <div class="container">
         <div id="movie-content" class="content">
-        </div>
-    </div>
-
-    <div id="tv-series">
-        <h1>TV Series</h1>
-        <div id="tv-content" class="content">
         </div>
     </div>
 
